# footbots-trajectory-prediction

footbots-trajectory-prediction/: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
footbots-trajectory-prediction/configs/: homography.example.json  team_map.example.json
footbots-trajectory-prediction/data/: README.md
footbots-trajectory-prediction/dataset/: README.md
footbots-trajectory-prediction/docs/: PIPELINE_JA.md  PUBLICATION_CHECKLIST_JA.md
footbots-trajectory-prediction/runs/: README.md
footbots-trajectory-prediction/scripts/: verify_repo.py
footbots-trajectory-prediction/src/: __init__.py  ball_trajectory.py  build_yolo_dataset.py  check_yolo.py  complete_ball_track.py  data.py  export_calibration_frame.py  extract_frames.py  make_yolo_yaml.py  model.py  predict_ball.py  predict_linear.py  predict_multimodal.py  predict_tracks.py  prepare_tracks.py  render_detection_debug.py  render_field_video.py  render_live_prediction_video.py  render_multimodal_video.py  render_prediction_video.py  synthetic_train.py  tactical_features.py  track_video.py  train_ball.py  train_real.py  train_yolo.py  video_tracking.py
